# gimbal_control

./: CMakeLists.txt  package.xml
include/gimbal_control/: gimbal_control.hpp
src/: gimbal_control.cpp
